hphp/hack/test/typecheck/references/refs_in_array/foreach3.php.exp
File "foreach3.php", line 13, characters 27-29:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
